...
            "state" : "translated",
            "value" : "תרופות פעילות:"
          }
        }
      }
    },
    "Add" : {
      "extractionState" : "stale",
      "localizations" : {
        "he" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "הוסף"
...
            "state" : "translated",
            "value" : "התייעץ תמיד עם ספק שירותי בריאות מוסמך לגבי כל חשש בריאותי הנוגע לילדך. לעולם אל תתעלם מייעוץ רפואי מקצועי או תעכב את קבלתו בגלל מידע שנרשם באפליקציה זו."
          }
        }
      }
    },
    "App Settings" : {
      "localizations" : {
        "he" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "הגדרות אפליקציה"
          }
...
            "state" : "translated",
            "value" : "מצב רוח התינוק"
          }
        }
      }
    },
    "Baby's Name" : {
      "localizations" : {
        "he" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "שם התינוק"
          }
...
            "state" : "translated",
            "value" : "רגוע"
          }
        }
      }
    },
    "Cancel" : {
      "localizations" : {
        "he" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "ביטול"
          }
...
            "state" : "translated",
            "value" : "פרטים"
          }
        }
      }
    },
    "Diaper" : {
      "localizations" : {
        "he" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "חיתול"
          }
...
            "state" : "translated",
            "value" : "סוג חיתול"
          }
        }
      }
    },
    "Diapers" : {
      "localizations" : {
        "he" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "חיתולים"
          }
...
            "state" : "translated",
            "value" : "פג תוקף בקרוב"
          }
        }
      }
    },
    "Export Data" : {
      "localizations" : {
        "he" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "ייצוא נתונים"
          }
        }
      }
    },
    "Export Data (CSV/JSON)" : {
      "localizations" : {
        "he" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "ייצוא נתונים (CSV/JSON)"
          }
...
            "state" : "translated",
            "value" : "תכונות"
          }
        }
      }
    },
    "Feed" : {
      "localizations" : {
        "he" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "האכלה"
          }
...
            "state" : "translated",
            "value" : "פרטי מזון"
          }
        }
      }
    },
    "Food Name" : {
      "localizations" : {
        "he" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "שם המזון"
          }
...
            "state" : "translated",
            "value" : "מדידות גדילה ממעקב הגדילה יישמרו אוטומטית ב-Apple Health."
          }
        }
      }
    },
    "Growth Tracking" : {
      "localizations" : {
        "he" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "מעקב גדילה"
          }
...
            "state" : "translated",
            "value" : "שיניים תחתונות"
          }
        }
      }
    },
    "Manage All Babies" : {
      "localizations" : {
        "he" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "נהל את כל התינוקות"
          }
...
            "state" : "translated",
            "value" : "התקדמות אבני דרך"
          }
        }
      }
    },
    "Milestones" : {
      "localizations" : {
        "he" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "אבני דרך"
          }
...
            "state" : "translated",
            "value" : "מצב רוח"
          }
        }
      }
    },
    "More" : {
      "localizations" : {
        "he" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "עוד"
          }
...
            "state" : "translated",
            "value" : "ניטרלי"
          }
        }
      }
    },
    "New Entry" : {
      "localizations" : {
        "he" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "רשומה חדשה"
          }
...
            "state" : "translated",
            "value" : "לילה"
          }
        }
      }
    },
    "Night Mode" : {
      "localizations" : {
        "he" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "מצב לילה"
          }
...
            "state" : "translated",
            "value" : "תמונה"
          }
        }
      }
    },
    "Photo Diary" : {
      "localizations" : {
        "he" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "יומן תמונות"
          }
...
            "state" : "translated",
            "value" : "תזכורת"
          }
        }
      }
    },
    "Reminders" : {
      "localizations" : {
        "he" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "תזכורות"
          }
...
            "state" : "translated",
            "value" : "דלג"
          }
        }
      }
    },
    "Sleep" : {
      "localizations" : {
        "he" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "שינה"
          }
...
            "state" : "translated",
            "value" : "חברתי"
          }
        }
      }
    },
    "Solid Foods" : {
      "localizations" : {
        "he" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "מזון מוצק"
          }
...
            "state" : "translated",
            "value" : "הופעל טיימר %@"
          }
        }
      }
    },
    "Statistics" : {
      "localizations" : {
        "he" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "סטטיסטיקה"
          }
        }
      }
    },
    "Stats" : {
      "localizations" : {
        "he" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "סטטיסטיקה"
          }
...
            "state" : "translated",
            "value" : "נוצל"
          }
        }
      }
    },
    "Vaccinations" : {
      "localizations" : {
        "he" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "חיסונים"
          }
...
            "state" : "translated",
            "value" : "פרטי חיסון"
          }
        }
      }
    },
    "Vaccine Name" : {
      "localizations" : {
        "he" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "שם החיסון"
          }
...
